# todo-tree

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-notes-v0.1.0.md
.github/workflows/: example.yml  publish.yml
memory/: MEMORY.md  project_package_name.md
src/todo_tree/: cli.py  hooks.py  models.py  parser.py  scanner.py  utils.py
src/todo_tree/generators/: html_gen.py  markdown_gen.py
src/todo_tree/templates/: dashboard.html
tests/: test_cli.py  test_cli_ci.py  test_cli_config.py  test_hooks.py  test_html_gen.py  test_integration.py  test_markdown_gen.py  test_parser.py  test_scanner.py
