[project]
name = "todo-tree-cli"
version = "0.1.0"
description = "🐓 Escanea tu proyecto en busca de TODOs, FIXMEs y HACKs. Genera un árbol de tareas en Markdown y un dashboard HTML con estadísticas. Perfecto para desarrolladores que depuran bugs antes del café."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tu Nombre", email = "tu.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation"
]
keywords = ["todo", "task", "dashboard", "code quality", "ci", "git hooks"]
urls = {"Source" = "https://github.com/your/repo", "Documentation" = "https://github.com/your/repo#readme"}
dependencies = [
    "typer[all]>=0.9.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0"
]
[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
]
[project.scripts]
todo-tree = "todo_tree.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
